2000-08-08  Peter Williams  <peterw@helixcode.com>

	* mail-callbacks.c (fetch_mail): Fix erroneous free.

	* mail-config-gui.c (mail_config_druid): Wrap the gtk_main call.

	* mail-ops.c (do_flag_messages): Allow specification of whether
	to set the flags unconditionally or toggle their current state.

	* message-list.c (ml_tree_set_value_at): Toggle the seen status;
	don't set it unconditionally.

	* mail-callbacks.c (delete_msg): Toggle the deletion status;
	don't set it unconditionally.

	* mail-tools.c (mail_tool_do_movemail): Fix for undeclared tmpfd.

	* mail-local.c (local_reconfigure_folder): Big rewrite; make into
	an asynchronous operation. Use some mail tools to make life easy.

2000-08-08  Dan Winship  <danw@helixcode.com>

	* main.c (main): Move mail_config_init after session_init, since
	it depends on evolution_dir being set.

2000-08-08  JP Rosevear  <jpr@helixcode.com>

	* mail-ops.c (check_configured): Use config accessors
	(fetch_mail): ditto
	(composer_send_cb): ditto
	(create_msg_composer): ditto

	* mail-config-gui.h: Update API

	* mail-config.h: Update API

	* mail-config.c: Add accessor functions
	(mail_config_is_configured): accessor function
	(mail_config_get_default_identity): ditto
	(mail_config_get_default_source): ditto
	(mail_config_get_transport): ditto
	(mail_config_send_html): ditto
	(identity_copy): Make public
	(identity_destroy): ditto
	(identity_destroy_each): ditto
	(service_copy): ditto
	(service_destroy): ditto
	(service_destroy_each): ditto
	(mail_config_init): Rename from init_config and make public
	(mail_config_clear): Rename from clear_config and make public
	(mail_config_read): Rename from read_config and make public
	(mail_config_write): Reanme from write_config and make public

	* main.c (main): Call mail_config_init.

	* mail.h: Include mail-config-gui.h

	* mail-config-gui.c: Move config gui stuff here.
	(source_dialog): Kill memory leak from debug leftovers.
	Make sure returned source is NULL by default
